# mega

./: .buckconfig  .dockerignore  .env  .env.example  .gitattributes  .gitignore  .gitmodules  BUILD  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dump20230523.sql  LICENSE-APACHE  LICENSE-MIT  LICENSE-THIRD-PARTY  README.md  WORKSPACE  b_link.txt  cargo-bazel-lock.json  cert.der  key.der  rustfmt.toml  vcpkg.json
api-model/: Cargo.toml
api-model/src/: common.rs  lib.rs
api-model/src/artifacts/: mod.rs
api-model/src/buck2/: api.rs  mod.rs  status.rs  types.rs  ws.rs
api-model/src/git/: commit.rs
api-model/src/orion/: log.rs
aries/: Cargo.toml
aries/src/: build.rs  main.rs
aries/src/service/: mod.rs  relay_server.rs
ceres/: BUCK  Cargo.toml  README.md
ceres/src/: lib.rs
ceres/src/api_service/: admin_ops.rs  blame_ops.rs  blob_ops.rs  bot_ops.rs  buck_tree_builder.rs  cache.rs  commit_ops.rs  group_ops.rs  history.rs  import_api_service.rs  mod.rs  mono_api_service.rs  state.rs  tree_ops.rs
ceres/src/application/: mod.rs
ceres/src/auth/: mod.rs
ceres/src/build_trigger/: dispatcher.rs  (+9 more)
client/: Cargo.toml  MegaClient.gresource  README.md  build.rs
client/resources/: org.Web3Infrastructure.MegaClient.gresource.xml  org.Web3Infrastructure.MegaClient.gschema.xml
client/sql/: sqlite_20240331_init.sql
client/src/: application.rs  db.rs  main.rs  mega.rs  window.rs
common/: BUCK  BUILD  Cargo.toml  README.md  config.toml
common/src/: config.rs  enums.rs  errors.rs  lib.rs  mod.rs  model.rs  utils.rs
context/: Cargo.toml
context/src/: lib.rs
craft/: .gitignore  BUILD  Cargo.toml  README.md  build.rs
craft/src/: crypt.rs  lib.rs  main.rs  message.txt  pgp_key.rs
database/: Cargo.toml
database/entity/: BUILD  Cargo.toml
database/src/: lib.rs
delta/: BUILD  Cargo.toml  README.md
delta/src/: lib.rs  utils.rs
extensions/: Cargo.toml  README.md  sync.py
extensions/Rag/: Cargo.toml  README.md
extensions/agent/: Cargo.toml  README.md
extensions/cratespro/: Cargo.toml
extensions/import_tugraph/: deploy-import-tugraph.sh
extensions/observatory/: Cargo.toml  docker-compose.yml
extensions/rag/: .env  README.md  code.txt  docker-compose.yml  dockerfile
extensions/rust/: .env  Cargo.toml
extensions/sync_tool/: .env  Cargo.toml  Dockerfile  README.md
extensions/update/: .env  Dockerfile  README.md  database.py  deploy-ext-update.sh  do_utils.py  kafka_message_model.py  model.py  requirements.txt  sync.py  update.sh
fuse/: BUILD  Cargo.toml  WORKSPACE  commit.sh
fuse/src/: common.rs  fs.rs  inode.rs  lib.rs  local_tmp.rs  main.rs  req_remote.rs
ganymede/: Cargo.toml  README.md
ganymede/src/: lib.rs  mega_node.rs  util.rs
gateway/: BUILD  Cargo.toml  README.md
gateway/src/: api_router.rs  ca_server.rs  git_http.rs  https.rs  https_server.rs  init.rs  lfs.rs  lib.rs  mod.rs  relay_server.rs  ssh.rs  ssh_server.rs  webhook.rs
gemini/: Cargo.toml  README.md
gemini/src/: lib.rs  util.rs
git/: BUILD  Cargo.toml
git/src/: hash.rs  lib.rs  mod.rs  utils.rs
io-orbit/: Cargo.toml
io-orbit/src/: adapter.rs  error.rs  factory.rs  lib.rs  log_storage.rs  object_storage.rs
jupiter/: BUCK  Cargo.toml  README.md
jupiter-migrate/: Cargo.toml  README.md
jupiter-migrate/src/: lib.rs
jupiter/callisto/: BUCK  Cargo.toml  README.md
jupiter/entity/: Cargo.toml
jupiter/migration/: .env  Cargo.toml  README.md
jupiter/src/: adapter.rs  context.rs  lib.rs  main.rs  storage.rs  tests.rs
kvcache/: BUILD  Cargo.toml
kvcache/src/: lib.rs  utils.rs
libra/: .gitignore  Cargo.toml  README.md  build.rs
libra/examples/: test_dry_run.rs
libra/sql/: sqlite_20240331_init.sql
libra/src/: cli.rs  db.rs  lib.rs  main.rs
libra/template/: pre-commit.ps1  pre-commit.sh
libra/tests/: command_test.rs  mega_test.rs
mda/: BUILD  Cargo.toml  cmd.md  example_anno_config.toml  mda_config.toml
mda/src/: anno_version_control.rs  entity.rs  main.rs  map_data.rs  mod.rs  rev_anno.rs  run_mda.rs  utils.rs
mega/: BUCK  Cargo.toml  README.md  config.toml  config.toml.example
mega/src/: build.rs  cli.rs  lib.rs  main.rs
mega/tests/: lfs_test.rs  service_test.rs
mega/wix/: main.wxs
mercury/: BUCK  Cargo.toml  README.md
mercury/delta/: BUCK  Cargo.toml  README.md
mercury/src/: errors.rs  hash.rs  lib.rs  utils.rs
mercury/zstdelta/: Cargo.toml  README.md
mono/: BUCK  Cargo.toml  Dockerfile  README.md  config.toml  init-volume.sh  mono-engine-dockerfile  start-mono.sh
mono/src/: build.rs  cli.rs  context.rs  lfs.rs  lib.rs  main.rs  orion_build_dispatch.rs
mono/tests/: buck_service_tests.rs  buck_upload_tests.rs  campsite_api_store_tests.rs  cl_merge_integration.rs  git_client_integration_tests.rs  http_server_session_tests.rs  login_user_extractor_tests.rs  multi_hash_integration_tests.rs  qlean_integration.rs  session_management_tests.rs
monobean/: Cargo.toml  Packager.toml  README.md  build.rs  setup.py
monobean/resources/: config.toml  fix_macos_deps.sh  gschemas.compiled  org.Web3Infrastructure.Monobean.gresource.xml  org.Web3Infrastructure.Monobean.gschema.xml  packager_aarch64-apple-darwin.toml  packager_linux.toml  packager_macos.toml  packager_x86_64-pc-windows-msvc.toml  packager_x86_64-unknown-linux-gnu.toml
monobean/src/: application.rs  config.rs  error.rs  main.rs  mega.rs  utils.rs  window.rs
mq/: Cargo.toml  README.md
mq/src/: cache.rs  event.rs  init.rs  lib.rs  queue.rs
neptune/: Cargo.toml  build.rs
neptune/hub/: main.js
neptune/src/: blame_diff.rs  lib.rs  neptune_engine.rs
observatory/: Cargo.toml  docker-compose.yml
observatory/src/: facilities.rs  lib.rs
orion-scheduler/: .gitignore  ARTIFACT.md  Cargo.toml  DESIGN.md  FUSE_MOUNT_ISSUES.md  QLEAN_ISSUES.md  README.md  TARGET_DISCOVERY_SCOPE.md  TESTING.md  install.sh  target_config.json.template
orion-scheduler/scripts/: build-custom-image.sh
orion-scheduler/src/: config.rs  handlers.rs  keep_alive.rs  main.rs  orion_deployer.rs  state.rs  vm_cleanup.rs  vm_manager.rs
orion-scheduler/systemd/: orion-scheduler.service
(+4717 files in other folders)
