[workspace.package]
edition = "2024"

[workspace]
members = [
  "api-model",
  "ceres",
  "common",
  "context",
  "io-orbit",
  "jupiter",
  "jupiter/callisto",
  "mono",
  "orion",
  "orion-server",
  "saturn",
  "vault",
]
default-members = ["mono", "orion", "orion-server"]
exclude = ["tools/artifacts-compose-e2e"]
resolver = "3"


[workspace.dependencies]
api-model = { path = "api-model" }
io-orbit = { path = "io-orbit" }
mono = { path = "mono" }
common = { path = "common" }
jupiter = { path = "jupiter" }
ceres = { path = "ceres" }
callisto = { path = "jupiter/callisto" }
vault = { path = "vault" }
saturn = { path = "saturn" }
orion = { path = "orion" }
bellatrix = { path = "orion-server/bellatrix" }

context = { path = "context" }

git-internal = "0.7.4"
libvault-core = "0.1.0"

#====
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-appender = "0.2.2"
thiserror = "2.0.18"
clap = "4.6.1"

#====
tokio = "1.52.1"
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
async-trait = "0.1.89"
async-stream = "0.3.6"
async-recursion = "1.1.1"
futures = "0.3.32"
futures-util = "0.3.32"
axum = { version = "0.8.9", features = ["macros", "json"] }
axum-extra = "0.12.6"
russh = "0.55.0"
tower-http = "0.6.8"
tower = "0.5.3"
tower-sessions = { version = "0.15", features = ["memory-store"] }
time = { version = "0.3.47", features = ["serde"] }
lettre = { version = "0.11", default-features = false, features = [
  "builder",
  "smtp-transport",
  "tokio1",
  "tokio1-rustls",
  "ring",
  "rustls-platform-verifier"
] }
#====
sea-orm = "1.1.20"
sea-orm-migration = "1.1.20"

#====
rand = "0.10.1"
smallvec = "1.15.1"
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
hex = "0.4.3"
sha1 = "0.11"
sha2 = "0.11"
rsa = "0.9.10"
hmac = "0.13"

idgenerator = "2.0.0"
config = "0.15.22"
reqwest = "0.13.2"
lazy_static = "1.5.0"
uuid = "1.23.1"
regex = "1.12.3"
ed25519-dalek = "2.2.0"
ctrlc = "3.5.2"
cedar-policy = "4.10.0"
secp256k1 = "0.30.0"
pgp = "0.15.0"
base64 = "0.22.1"

utoipa = { version = "5.4.0", features = ["chrono"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = "9.0.2"
tempfile = "3.27.0"
dashmap = "6.1.0"
once_cell = "1.21.4"
serial_test = "3.4.0"
sysinfo = "0.38"
http = "1.4.0"
url = "2.5.8"
jemallocator = "0.5.4"
mimalloc = "0.1.50"
dotenvy = "0.15.7"
tokio-tungstenite = "0.29"
tungstenite = "0.29"
itertools = "0.14.0"
bs58 = "0.5.1"
indexmap = "2.14"
envsubst = "0.2.1"
directories = "6.0.0"
redis = "1.2.0"
redis-test = "1.0.3"
rustls = "0.23"
object_store = "0.13.2"
parse-display = "0.10.0"
qlean = "0.2.3"
toml = "1.1.2"
rkyv = "0.8.15"
percent-encoding = "2.3"


[profile.release]
debug = true
