[workspace.package]
edition = "2024"

[workspace]
members = [
  "api-model",
  "ceres",
  "clients/orion-client",
  "common",
  "io-orbit",
  "jupiter",
  "jupiter/callisto",
  "jupiter-migrate",
  "mono",
  "orion",
  "orion-scheduler",
  "orion-server",
  "saturn",
  "vault",
]
default-members = ["mono", "orion", "orion-server", "orion-scheduler"]
resolver = "3"


[workspace.dependencies]
api-model = { path = "api-model" }
io-orbit = { path = "io-orbit" }
mono = { path = "mono" }
common = { path = "common" }
jupiter = { path = "jupiter" }
jupiter-migrate = { path = "jupiter-migrate" }
ceres = { path = "ceres" }
callisto = { path = "jupiter/callisto" }
vault = { path = "vault" }
saturn = { path = "saturn" }
orion = { path = "orion" }
orion-client = { path = "clients/orion-client" }

git-internal = "0.7.6"
libvault-core = "0.1.0"

#====
anyhow = "1.0.103"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_urlencoded = "0.7"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-appender = "0.2.5"
thiserror = "2.0.18"
clap = "4.6.1"

#====
tokio = "1.52.3"
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
async-trait = "0.1.89"
async-stream = "0.3.6"
async-recursion = "1.1.1"
futures = "0.3.32"
futures-util = "0.3.32"
axum = { version = "0.8.9", features = ["macros", "json"] }
axum-extra = "0.12.6"
russh = "0.61.2"
tower-http = "0.7.0"
tower = "0.5.3"
tower-sessions = { version = "0.15", features = ["memory-store"] }
time = { version = "0.3.51", features = ["serde"] }
lettre = { version = "0.11", default-features = false, features = [
  "builder",
  "smtp-transport",
  "tokio1",
  "tokio1-rustls",
  "ring",
  "rustls-platform-verifier",
] }
#====
sea-orm = "1.1.20"
sea-orm-migration = "1.1.20"

#====
rand = "0.10.1"
smallvec = "1.15.2"
bytes = "1.12.0"
chrono = { version = "0.4.45", features = ["serde"] }
hex = "0.4.3"
sha1 = "0.11"
sha2 = "0.11"
rsa = "0.9.10"
hmac = "0.13"

idgenerator = "2.0.0"
config = "0.15.25"
reqwest = "0.13.4"
lazy_static = "1.5.0"
uuid = "1.23.4"
regex = "1.12.4"
ed25519-dalek = "2.2.0"
ctrlc = "3.5.2"
cedar-policy = "4.11.2"
secp256k1 = "0.31.1"
pgp = "0.20.0"
base64 = "0.22.1"

utoipa = { version = "5.5.0", features = ["chrono"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = "9.0.2"
tempfile = "3.27.0"
dashmap = "6.2.1"
once_cell = "1.21.4"
serial_test = "3.5.0"
sysinfo = "0.39.5"
http = "1.4.2"
url = "2.5.8"
jemallocator = "0.5.4"
mimalloc = "0.1.52"
dotenvy = "0.15.7"
tokio-tungstenite = "0.29"
tungstenite = "0.29"
itertools = "0.15.0"
bs58 = "0.5.1"
indexmap = "2.14"
envsubst = "0.2.1"
directories = "6.0.0"
redis = "1.3.0"
redis-test = "1.0.4"
rustls = "0.23.41"
object_store = "0.14.0"
parse-display = "0.11.0"
qlean = "0.3.0"
toml = "1.1.2"
rkyv = "0.8.16"
percent-encoding = "2.3"


[profile.release]
debug = false
strip = "symbols"

[profile.demo]
inherits = "release"
debug = false
strip = "symbols"
codegen-units = 16
lto = false
incremental = false
