[package]
name = "api-model"
version = "0.1.0"
edition = "2024"


[lib]
name = "api_model"
path = "src/lib.rs"


[dependencies]
serde = { workspace = true, features = ["derive"] }
utoipa = { workspace = true }
anyhow = {workspace = true}
thiserror = {workspace = true}
parse_display = {workspace = true}