[package]
name = "aries"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[[bin]]
name = "aries"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
callisto = { workspace = true }
gemini = { workspace = true }
jupiter = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = [
    "cors",
    "trace",
    "decompression-full",
] }
ctrlc = { workspace = true }
regex = { workspace = true }
