[package]
name = "ceres"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ceres"
path = "src/lib.rs"


[dependencies]
common = { workspace = true }
jupiter = { workspace = true }
callisto = { workspace = true }
git-internal = { workspace = true }
neptune = { workspace = true }
bellatrix = { workspace = true }

anyhow = { workspace = true }
# Use 0.16.0 version for GPG Verification
pgp = { version = "0.16.0" }
tokio = { workspace = true, features = ["net", "process"] }
tokio-stream = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
ring = { workspace = true }
hex = { workspace = true }
sysinfo = { workspace = true }
utoipa = { workspace = true }
base64 = { workspace = true }
http = { workspace = true }
regex = "1.11.1"

[dev-dependencies]
tempfile = { workspace = true }
