[package]
name = "ceres"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ceres"
path = "src/lib.rs"

[dependencies]
api-model = { workspace = true }
io-orbit = { workspace = true }
common = { workspace = true }
jupiter = { workspace = true }
callisto = { workspace = true }
git-internal = { workspace = true }
bellatrix = { workspace = true }
saturn = { workspace = true }

anyhow = { workspace = true }
# TODO: Use 0.16.0 version for GPG Verification, consider to adapt the latest version in the future 
pgp = { version = "0.16.0" }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
rand = { workspace = true, features = ["thread_rng"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha1 = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
reqwest = { workspace = true, features = ["json", "stream"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "process"] }
tokio-stream = { workspace = true }
axum = { workspace = true }
async-recursion = { workspace = true }
sysinfo = { workspace = true }
utoipa = { workspace = true }
regex = { workspace = true }
tokio-util = { workspace = true }
rkyv = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
