[package]
name = "mega_client"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Neon<neonkk@qq.com>"]

[[bin]]
name = "mega_client"
path = "src/main.rs"

build = "build.rs"

[dependencies]
gtk = { version = "~0.9", package = "gtk4", features = ["v4_16"] }
adw = { version = "~0.7", package = "libadwaita", features = ["v1_5"] }

async-channel = "2.3.1"

[build-dependencies]
glib-build-tools = "0.20.0"
