[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
callisto = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true, features = ["derive"] }
idgenerator = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
envsubst = "0.2.1"
rand = { workspace = true }
serde_json = { workspace = true }
regex.workspace = true
sea-orm = { workspace = true, features = ["macros"] }
aws-sdk-s3 = { workspace = true, features = ["default-https-client"] }
reqwest = { workspace = true }
ring = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
utoipa = { workspace = true }
