[package]
name = "common"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
git-internal = { workspace = true }
api-model = { workspace = true }

axum = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true, features = ["derive"] }
idgenerator = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
envsubst = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
sea-orm = { workspace = true, features = ["macros"] }
directories = { workspace = true }
pgp = { workspace = true }
cedar-policy = { workspace = true }
redis = { workspace = true }
bincode = { workspace = true }
