[package]
name = "common"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
git-internal = { workspace = true }
api-model = { workspace = true }

axum = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true, features = ["derive"] }
idgenerator = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
envsubst = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
# `jupiter` depends on `common`; cannot use `jupiter::sea_orm` here. `MegaError::Db` wraps `sea_orm::DbErr`.
sea-orm = { workspace = true, features = ["macros"] }
directories = { workspace = true }
pgp = { workspace = true }
cedar-policy = { workspace = true }
redis = { workspace = true }
rkyv = { workspace = true}
toml = { workspace = true }