[package]
name = "git-craft"
version = "0.1.0"
edition = "2021"

[workspace]
members = []

[dependencies]
pgp = "0.10.2"
smallvec = "2.0.0-alpha.3"
rusty_vault = { git = "https://github.com/Tongsuo-Project/RustyVault.git", version = "0.1.0" }
fs2 = "0.4.3"
tempfile = "3.10.0"

anyhow = { workspace = true }
rand = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
go-defer = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
