[package]
name = "git-craft"
version = "0.1.0"
edition = "2021"

build = "build.rs"
[workspace]
members = []

[build-dependencies]
regex = "1.10.3 "
[target.'cfg(windows)'.build-dependencies]
vcpkg = "0.2"

[dependencies]
pgp = "0.10.2"
#smallvec = "2.0.0-alpha.3"
smallvec = "1.11.1"
rusty_vault = { git = "https://github.com/Tongsuo-Project/RustyVault.git", rev = "ad9f6043678b0fdb5325091b635ee8f2ee891a3d" }
fs2 = "0.4.3"
gettext-rs = "0.7.0"
gettext-sys = "0.21.0"
libc = "0.2.152"


anyhow = "1.0.79"
rand = "0.8.5"
clap = { version = "4.4.8", features = ["derive"] }
serde_json = "1.0.110"
go-defer = "0.1.0"
hex = "0.4.3"
tracing = "0.1.40"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["minwindef", "winnt", "winnls","winuser","shellapi","securitybaseapi","handleapi", "winerror"] }
winreg = "0.52.0"

