[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "database"
path = "src/mod.rs"


[dependencies]
common = {path = "../common"}
entity = {path = "./entity"}
anyhow = "1.0.75"
async-recursion = "1.0.4"
async-trait = "0.1.71"
tracing = "0.1.37"
idgenerator = "2.0.0"
chrono = "0.4.24"
sha256 = "1.1.4"
serde = "1.0.188"
serde_json = "1.0.105"
futures = "0.3.28"
clap = "4.4.0"
sea-orm = {version = "0.12.2", features = [
    "sqlx-postgres",
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
]}
