[package]
name = "delta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
venus = { path = "../venus" }
diffs = "0.5.1"
thiserror = { workspace = true }
sha1 = { workspace = true }
flate2 = { workspace = true, features = ["zlib"] }

[features]
default = ["diff_mydrs"]
diff_mydrs = []
