[package]
name = "fuse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = "0.12.0"
clap = "4"
log = "0.4.19"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["rt","rt-multi-thread", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2.147"