[package]
name = "fuse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
fuser = "0.14.0"
clap = { version = "4.5.0", features = ["derive"] }
hyper = { version = "1.1.0", features = ["full"] }
tokio = { version = "1", features = ["rt","rt-multi-thread", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2.147"