[package]
name = "ganymede"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
callisto = { path = "../jupiter/callisto" }
venus = { path = "../venus" }

serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true }