[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gateway"
path = "src/lib.rs"

[dependencies]
common = { workspace = true }
jupiter = { workspace = true }
callisto = { workspace = true }
ceres = { workspace = true }
gemini = { workspace = true }
vault = { workspace = true }
venus = { workspace = true }
mercury = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = { workspace = true }
tracing = { workspace = true }
russh = { workspace = true }
russh-keys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tower-http = { workspace = true, features = [
    "cors",
    "trace",
    "decompression-full",
] }
axum-extra = { workspace = true, features = ["typed-header"]}
tokio = { workspace = true, features = ["net"] }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
uuid = { workspace = true, features = ["v4"] }
regex = "1.10.4"
ed25519-dalek = { version = "2.1.1", features = ["pkcs8"] }
