[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gateway"
path = "src/lib.rs"

[dependencies]
mono = { workspace = true }
common = { workspace = true }
jupiter = { workspace = true }
callisto = { workspace = true }
gemini = { workspace = true }
vault = { workspace = true }
taurus = { workspace = true }

axum = { workspace = true }
axum-server = { workspace = true, features = ["tls-rustls"] }
tower = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tower-http = { workspace = true, features = [
    "cors",
    "trace",
    "decompression-full",
] }
tokio = { workspace = true, features = ["net"] }
reqwest = { workspace = true, features = ["json"] }
lazy_static = { workspace = true }
chrono = { workspace = true }
quinn = { workspace = true }
