[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gateway"
path = "src/lib.rs"

[dependencies]
mono = { workspace = true }
common = { workspace = true }
jupiter = { workspace = true }
callisto = { workspace = true }
context = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tower-http = { workspace = true, features = [
    "cors",
    "trace",
    "decompression-full",
] }
tokio = { workspace = true, features = ["net"] }
reqwest = { workspace = true, features = ["json"] }
chrono = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
anyhow = { workspace = true }
