[package]
name = "gemini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gemini"
path = "src/lib.rs"


[dependencies]
common = { workspace = true }
callisto = { workspace = true }
vault = { workspace = true }
jupiter = { workspace = true }
ceres = { workspace = true }
mercury = { workspace = true }

axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["net"] }
chrono = { workspace = true }
secp256k1 = { workspace = true, features = ["serde", "rand", "hashes"] }
quinn = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }
rcgen = { version = "0.13", features = ["x509-parser", "pem", "crypto"] }
dashmap = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
log = "0.4"
env_logger = "0.11.7"
