[package]
name = "git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "git"
path = "src/lib.rs"

[features]
default = ["diff_mydrs"]
diff_mydrs = []


[dependencies]
common = { path = "../common" }
entity = { path = "../storage/entity" }
storage = { path = "../storage" }
kvcache = { path = "../kvcache" }
delta = { path = "../delta"}
anyhow = "1.0.75"
bstr = "1.7.0"
chrono = "0.4.24"
colored = "2.0.0"
deflate = "1.0.0"
flate2 = "1.0.26"
hex = "0.4.3"
sha1 = "0.10.6"
thiserror = "1.0.47"
futures = "0.3.28"
bytes = "1.4.0"
tracing = "0.1.37"
tokio = "1.34.0"
byteorder = "1.4.3"
crc = "3.0.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
lru = "0.12.0"
async-recursion = "1.0.4"
num_cpus = "1.16.0"
dotenvy = "0.15.7"
diffs = "0.5.1"
sea-orm = { version = "0.12.6", features = [
    "runtime-tokio-rustls",
    "macros",
    "mock",
] }
redis = { version = "0.23.3", features = ["tokio-comp"] }
itertools = "0.12.0"

[dev-dependencies]
tokio-test = "0.4.2"