[package]
name = "git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "git"
path = "src/lib.rs"

[features]
default = ["diff_mydrs"]
diff_mydrs = []


[dependencies]
common = { path = "../common" }
entity = { path = "../storage/entity" }
storage = { path = "../storage" }
kvcache = { path = "../kvcache" }
delta = { path = "../delta"}
anyhow = "1.0"
bstr = "1.8.0"
chrono = "0.4"
colored = "2.1.0"
deflate = "1.0.0"
flate2 = "1.0"
hex = "0.4.3"
sha1 = "0.10.6"
thiserror = "1.0"
futures = "0.3"
bytes = "1.5"
tracing = "0.1"
tokio = {version = "1.35.1", features = ["rt"]}
byteorder = "1.5.0"
crc = "3.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lru = "0.12"
async-recursion = "1.0"
num_cpus = "1.16.0"
dotenvy = "0.15.7"
diffs = "0.5.1"
sea-orm = { version = "0.12.10", features = [
    "runtime-tokio-rustls",
    "macros",
    "mock",
] }
redis = { version = "0.24.0", features = ["tokio-comp"] }
itertools = "0.12.0"

[dev-dependencies]
tokio-test = "0.4.3"