[package]
name = "git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "git"
path = "src/lib.rs"

[features]
default = ["diff_mydrs"]
diff_mydrs = []


[dependencies]
common = { path = "../common" }
entity = { path = "../storage/entity" }
storage = { path = "../storage" }
kvcache = { path = "../kvcache" }
delta = { path = "../delta" }
jupiter = { path = "../jupiter" }
mercury = { path = "../mercury" }

deflate = "1.0.0"
byteorder = "1.5.0"
crc = "3.0"
lru = "0.12"
async-recursion = "1.0"
num_cpus = "1.16.0"
diffs = "0.5.1"
itertools = "0.12.0"

anyhow = { workspace = true }
chrono = { workspace = true }
bstr = { workspace = true }
hex = { workspace = true }
sha1 = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dotenvy = { workspace = true }
flate2 = { workspace = true }
sea-orm = { workspace = true, features = [
    "runtime-tokio-rustls",
    "macros",
    "mock",
] }
redis = { workspace = true, features = ["tokio-comp"] }
colored = {workspace = true}

[dev-dependencies]
tokio-test = { workspace = true }
