[package]
name = "io-orbit"
version = "0.1.0"
edition.workspace = true

[lib]
name = "io_orbit"
path = "src/lib.rs"


[dependencies]
common = { workspace = true }

object_store = { workspace = true, features = ["cloud", "aws", "gcp"] }
futures = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["time"] }
serde = { workspace = true }
serde_json = { workspace = true }
