[package]
name = "jupiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jupiter"
path = "src/lib.rs"


[dependencies]
callisto = { workspace = true }
common = { workspace = true }
mercury = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "sqlx-mysql",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
tracing = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
idgenerator = { workspace = true }
serde = { workspace = true }
handlebars = "6.0.0"

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
