[package]
name = "jupiter"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jupiter"
path = "src/lib.rs"

[dependencies]
callisto = { workspace = true }
common = { workspace = true }
git-internal = { workspace = true }
saturn = { workspace = true }
io-orbit = { workspace = true }
api-model = { workspace = true }

sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
] }
sea-orm-migration = { workspace = true }

tracing = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
idgenerator = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-std"] }
uuid = { workspace = true }
tempfile = { workspace = true }
indexmap = { workspace = true }
url = { workspace = true }
pgp = { workspace = true }
redis = { workspace = true, features = [
    "aio",
    "tokio-rustls-comp",
    "connection-manager",
] }
rustls = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
redis-test = { workspace = true, features = ["aio"] }
