[package]
name = "kvcache"
version = "0.1.0"
edition = "2021"


[features]
default=["json"]
protobuf=[]
json=[]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.23.3", features = ["tokio-comp"] }
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"
prost-types = "0.12"

[dev-dependencies]
redis-test = "0.2.3"
