[package]
name = "kvcache"
version = "0.1.0"
edition = "2021"


[features]
default = ["json"]
protobuf = []
json = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12"
prost-types = "0.12"

redis = { workspace = true, features = ["tokio-comp"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
redis-test = "0.3.0"
